<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="@dimen/padding_20"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DisclaimerActivity"
    tools:showIn="@layout/activity_disclaimer">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Disclaimer"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_xl"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer_1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer_2"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer_3"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer_4"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer_5"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer_6"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_10"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>